# QA-All-in-one

./: .gitignore  .seo_checker_history.jsonl  Dockerfile  README.md  pyproject.toml  requirements.txt
Spell_checker/: spell_checker.py
logs/: spellcheck.csv
src/seo_checker/: __init__.py  __main__.py  cli.py  interactive.py  menu.py
src/seo_checker/api/: __init__.py  server.py
src/seo_checker/checks/: __init__.py  faq.py  hero.py  images.py  indexability.py  internal_links.py  locations.py  mobile.py  robots_sitemaps.py  schema.py
src/seo_checker/utils/: __init__.py  fetch.py
tools/: capture_sections.js
